--- a/rosidl_runtime_c/Makefile
+++ b/rosidl_runtime_c/Makefile
@@ -7,7 +7,7 @@ BUILD_DIR = build
 # ==================================
 
 NUM_PROCS = 4
-REMOTE_USER_HOST = "patrick@vm_comp4961_ubuntu2204"
+REMOTE_USER_HOST = "patrick@vm_comp4961_ubuntu1804"
 REMOTE_DEST_DIR = "~/remote/$(shell hostname -s)/"
 
 .PHONY: push-remote
@@ -54,7 +54,11 @@ build:
 		cmake -S . -B $(BUILD_DIR) \
 			-DCMAKE_C_COMPILER_WORKS=1 \
 			-DCMAKE_CXX_COMPILER_WORKS=1 \
-			-DBUILD_TESTING=0
+			-DBUILD_TESTING=0 \
+			-DCMAKE_MODULE_PATH=./
 	cd $(BUILD_DIR) && $(MAKE) -j $(NUM_PROCS)
 	# Install so that we can use the library in other projects.
 	cd $(BUILD_DIR) && sudo $(MAKE) install
+	# Files are installed here:
+	# /usr/local/lib/librcutils.a
+	# /usr/local/include/rcutils
