Updated Makefile for rosidl-sel4cp.

--- a/rosidl_runtime_c/Makefile
+++ b/rosidl_runtime_c/Makefile
@@ -1,6 +1,7 @@
 SHELL = /bin/zsh
 PWD_DIR = "$(shell basename $$(pwd))"
 BUILD_DIR = build
+INSTALL_DIR = ~/ros2
 
 # ==================================
 # Pushes the current directory to remote host.
@@ -43,6 +44,8 @@ remote: push-remote
 .PHONY: clean
 clean:
 	rm -rf $(BUILD_DIR)
+	rm -rf $(INSTALL_DIR)/include/rosidl_runtime_c
+	rm -rf $(INSTALL_DIR)/lib/librosidl_runtime_c.a
 
 # ==================================
 # Build
@@ -55,10 +58,11 @@ build:
 			-DCMAKE_C_COMPILER_WORKS=1 \
 			-DCMAKE_CXX_COMPILER_WORKS=1 \
 			-DBUILD_TESTING=0 \
+			-DCMAKE_INSTALL_PREFIX=$(INSTALL_DIR) \
 			-DCMAKE_MODULE_PATH=./
 	cd $(BUILD_DIR) && $(MAKE) -j $(NUM_PROCS)
 	# Install so that we can use the library in other projects.
-	cd $(BUILD_DIR) && sudo $(MAKE) install
+	cd $(BUILD_DIR) && $(MAKE) install
 	# Files are installed here:
 	# /usr/local/lib/librcutils.a
 	# /usr/local/include/rcutils
