--- a/rosidl_typesupport_interface/Makefile
+++ b/rosidl_typesupport_interface/Makefile
@@ -1,6 +1,7 @@
 SHELL = /bin/zsh
 PWD_DIR = "$(shell basename $$(pwd))"
 BUILD_DIR = build
+INSTALL_DIR = ~/ros2
 
 # ==================================
 # Pushes the current directory to remote host.
@@ -43,7 +44,7 @@ remote: push-remote
 .PHONY: clean
 clean:
 	rm -rf $(BUILD_DIR)
-	sudo rm -rf /usr/local/include/rosidl_typesupport_interface
+	rm -rf $(INSTALL_DIR)/include/rosidl_typesupport_interface
 
 # ==================================
 # Build
@@ -56,7 +57,8 @@ build:
 			-DCMAKE_C_COMPILER_WORKS=1 \
 			-DCMAKE_CXX_COMPILER_WORKS=1 \
 			-DBUILD_TESTING=0 \
+			-DCMAKE_INSTALL_PREFIX=$(INSTALL_DIR) \
 			-DCMAKE_MODULE_PATH=./
 	cd $(BUILD_DIR) && $(MAKE) -j $(NUM_PROCS)
 	# Install so that we can use the library in other projects.
-	cd $(BUILD_DIR) && sudo $(MAKE) install
+	cd $(BUILD_DIR) && $(MAKE) install
