--- a/rosidl_runtime_c/Makefile
+++ b/rosidl_runtime_c/Makefile
@@ -58,6 +58,8 @@ build:
 			-DCMAKE_C_COMPILER_WORKS=1 \
 			-DCMAKE_CXX_COMPILER_WORKS=1 \
 			-DBUILD_TESTING=0 \
+			-DNO_ASSERT=1 \
+			-DNO_STDIO=1 \
 			-DCMAKE_INSTALL_PREFIX=$(INSTALL_DIR) \
 			-DCMAKE_MODULE_PATH=./
 	cd $(BUILD_DIR) && $(MAKE) -j $(NUM_PROCS)
